--- a/index.html
+++ b/index.html
@@ -79,8 +79,10 @@
         </nav>
     </header>
 
+    
     <div id="firstAnchor"></div>
     <main>
+        <div id="infoMail" class="text-center"></div>
         <section id="home" class="container mt-3 d-lg-block">
             <div class="presentation">
                 <h3>Benvenuti su GevoBadge</h3>
@@ -170,22 +172,22 @@
             </div>
             <div id="contactsForm" class="ms-5">
                 <form action="process.php" method="POST">
-                    <input type="text" id="name" placeholder="Nome*">
+                    <input type="text" id="name" name="name" placeholder="Nome*">
                     <span id="nameError" class="error-message"></span>
 
-                    <input type="text" id="surname" placeholder="Cognome*">
+                    <input type="text" id="surname" name="surname" placeholder="Cognome*">
                     <span id="surnameError" class="error-message"></span>
 
-                    <input type="text" id="email" placeholder="E-mail*">
+                    <input type="text" id="email" name="email" placeholder="E-mail*">
                     <span id="emailError" class="error-message"></span>
 
-                    <input type="text" id="agency" placeholder="Azienda*">
+                    <input type="text" id="agency" name="agency" placeholder="Azienda*">
                     <span id="agencyError" class="error-message"></span>
 
-                    <input type="text" id="tel" placeholder="Telefono*">
+                    <input type="text" name="tel" id="tel" placeholder="Telefono">
                     <span id="telError" class="error-message"></span>
 
-                    <textarea id="message" placeholder="Spiegaci come possiamo aiutarti (Messaggio da parte dei clienti)*"></textarea>
+                    <textarea id="message" name="message" placeholder="Spiegaci come possiamo aiutarti (Messaggio da parte dei clienti)*"></textarea>
                     <span id="messageError" class="error-message"></span>
 
                     <small id="infoInput">Tutti i campi segnati da * sono OBBLIGATORI</small>
@@ -217,6 +219,7 @@
                     <button type="submit" id="contact-us">Contattaci</button>
                 </form>
             </div>
+
 
             
         </section>
