--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
                     <a href="#fivthAnchor">Validator</a>
                 </div>
             </div>
-            <div id="goToLogin">
-                <a href="https://gevobadge.it" target="_blank">Accedi/Registrati</a>
-            </div>
+            <a id="goToLogin" href="https://gevobadge.it" target="_blank">
+                <p>Accedi/Registrati</p>
+            </a>
         </nav>
     </header>
 
@@ -84,7 +84,7 @@
     <main>
         <div id="infoMail" class="text-center"></div>
 
-        <section id="home" class="container mt-3 d-lg-block">
+        <section id="home" class="container d-lg-block">
             <div class="presentation">
                 <h3>Benvenuti su GevoBadge</h3>
                 <small>Riconosci e valorizza le competenze con gli Open Badge</small>
@@ -230,10 +230,10 @@
         <div class="d-flex justify-content-between align-items-center container">
 
             <div class="footer-info">
-                <p>GevoBadge</p>
-                <p>Sede Legale</p>
-                <p>Email</p>
-                <p>Telefono</p>
+                <div class="logo-gevo mb-3">
+                    <img src="images/Progetto Logo 18.png" alt="Logo Gevo Badge">
+                </div>
+                <a href="https://www.google.com/maps/place/EBAFoS+-+Ente+Bilaterale+Aziendale+per+la+Formazione+e+la+Sicurezza/@41.4574146,12.9268405,17z/data=!4m20!1m13!4m12!1m4!2m2!1d12.9302528!2d41.4547968!4e1!1m6!1m2!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!2sebafos!2m2!1d12.9283536!2d41.4587184!3m5!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!8m2!3d41.4587184!4d12.9283536!16s%2Fg%2F11c6pn44pk?entry=ttu">Sede Legale: Via dei Volsini, 14, 04100 Latina LT</p>
             </div>
             <div class="footer-info">
                 <p>
@@ -242,6 +242,8 @@
                 <p>
                     <a href="" class="privacy-policy-link">Privacy Policy</a>
                 </p>
+                <p>Email</p>
+                <p>Telefono</p>
             </div>
             <div class="footer-info">
                 <p>
