updated style on carousel

--- a/index.html
+++ b/index.html
@@ -104,8 +104,14 @@
                     <div id="secondAnchor"></div>
                 </div>
                 <div class="carouselArrows">
-                    <button id="left"><i class="fa-solid fa-arrow-left"></i></button>
-                    <button id="right"><i class="fa-solid fa-arrow-right"></i></button>
+                    <div class="dots">
+                        <button id="dot-0"><i class="fa-solid fa-circle active-dot"></i></button>
+                        <button id="dot-1"><i class="fa-solid fa-circle"></i></button>
+                        <button id="dot-2"><i class="fa-solid fa-circle"></i></button>
+                        <button id="dot-3"><i class="fa-solid fa-circle"></i></button>
+                        <button id="dot-4"><i class="fa-solid fa-circle"></i></button>
+                        <button id="dot-5"><i class="fa-solid fa-circle"></i></button>
+                    </div>
                 </div>
             </div>
         </section>
