fixed dots on carousel

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="logo-gevo mb-3">
                     <img src="images/Progetto Logo 18.png" alt="Logo Gevo Badge">
                 </div>
-                <a href="https://www.google.com/maps/place/EBAFoS+-+Ente+Bilaterale+Aziendale+per+la+Formazione+e+la+Sicurezza/@41.4574146,12.9268405,17z/data=!4m20!1m13!4m12!1m4!2m2!1d12.9302528!2d41.4547968!4e1!1m6!1m2!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!2sebafos!2m2!1d12.9283536!2d41.4587184!3m5!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!8m2!3d41.4587184!4d12.9283536!16s%2Fg%2F11c6pn44pk?entry=ttu">Sede Legale: Via dei Volsini, 14, 04100 Latina LT</p>
+                <p>Sede Legale: <a href="https://www.google.com/maps/place/EBAFoS+-+Ente+Bilaterale+Aziendale+per+la+Formazione+e+la+Sicurezza/@41.4574146,12.9268405,17z/data=!4m20!1m13!4m12!1m4!2m2!1d12.9302528!2d41.4547968!4e1!1m6!1m2!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!2sebafos!2m2!1d12.9283536!2d41.4587184!3m5!1s0x13250c5bbce23fb5:0xe8d5d8dfa2708abf!8m2!3d41.4587184!4d12.9283536!16s%2Fg%2F11c6pn44pk?entry=ttu">Via dei Volsini, 14, 04100 Latina LT</a></p>
             </div>
             <div class="footer-info">
                 <p>
@@ -248,8 +248,8 @@
                 <p>
                     <a href="" class="privacy-policy-link">Privacy Policy</a>
                 </p>
-                <p>Email</p>
-                <p>Telefono</p>
+                <p>Email: <a href="mailto:info@ebafos.com">info@ebafos.com</a></p>
+                <p>Telefono: <a href="tel:0773280953">0773 280953</a></p>
             </div>
             <div class="footer-info">
                 <p>
