updated layout on sections

--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
             </div>
         </section>
         
-        <section id="openBadge" class="mt-3">
+        <section id="openBadge">
+            <img src="images/Progetto_senza_titolo__1_-removebg-preview.png" alt="" class="waves-up">
             <div class="presentation">
                 <h3>Cosa sono gli Open Badge?</h3>
                 <small>Perchè è preferibile un Open Badge digitale rispetto alla tradizionale certificazione cartacea?</small>
@@ -130,6 +131,7 @@
                 </div>
                 <div id="fivthAnchor"></div>
             </div>
+            <img src="images/Progetto_senza_titolo__1_-removebg-preview.png" alt="" class="waves-down">
         </section>
 
         <section id="scopriGevoBadge" class="container mt-3">
@@ -160,15 +162,17 @@
             </div>
         </section>
 
-        <section id="validator" class="mt-3 pb-4">
+        <section id="validator">
+            <img src="images/Progetto_senza_titolo__1_-removebg-preview.png" alt="" class="waves-u">
             <div class="text-center container">
                 <h3>Validator</h3>
                 <img src="images/validator.png" class="img-fluid shadow" alt="Img Rappresentativa">
             </div>
             <div id="fourthAnchor"></div>
+            <img src="images/Progetto_senza_titolo__1_-removebg-preview.png" alt="" class="waves-d">
         </section>
 
-        <section id="contacts" class="container d-flex justify-content-between mt-3">
+        <section id="contacts" class="container d-flex justify-content-between">
             <div id="infoForm">
                 <h5 class="mt-3 mb-4">Vuoi sapere di più su GevoBadge?
                     <br>
