added link to img of linkedin & youtube

--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
                 </p>
                 <p>
                     <a href="https://www.facebook.com/EBAFOS/?ref=bookmarks" target="_blank"><i class="fa-brands  fa-square-facebook fa-3x"></i></a> 
-                    <a href=""><i class="fa-brands fa-linkedin fa-3x" target="_blank"></i></a> 
-                    <a href=""><i class="fa-brands fa-square-youtube fa-3x" target="_bank"></i></a>  
+                    <a href="https://www.linkedin.com/company/ebafos/"><i class="fa-brands fa-linkedin fa-3x" target="_blank"></i></a> 
+                    <a href="https://www.youtube.com/@ebafosinforma293"><i class="fa-brands fa-square-youtube fa-3x" target="_bank"></i></a>  
                 </p>
             </div>
         </div>
